// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> render correctly with medium size 1`] = `
<div
  className="test"
>
  <div
    style={
      Object {
        "border": "2px solid #CFCFCF",
        "height": 0,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "2px solid #5489DC",
          "marginLeft": "-2px",
          "marginTop": "-2px",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> render correctly with percentage greater then 80 1`] = `
<div
  className="test"
>
  <div
    style={
      Object {
        "border": "2px solid #CFCFCF",
        "height": 0,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "2px solid #5489DC",
          "marginLeft": "-2px",
          "marginTop": "-2px",
          "width": "90%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> render correctly with percentage lower then 20 1`] = `
<div
  className="test"
>
  <div
    style={
      Object {
        "border": "2px solid #CFCFCF",
        "height": 0,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "2px solid #DB1F35",
          "marginLeft": "-2px",
          "marginTop": "-2px",
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> render correctly with percentage lower then 40 1`] = `
<div
  className="test"
>
  <div
    style={
      Object {
        "border": "2px solid #CFCFCF",
        "height": 0,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "2px solid #FFC400",
          "marginLeft": "-2px",
          "marginTop": "-2px",
          "width": "35%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> render correctly with small size 1`] = `
<div
  className="test"
>
  <div
    style={
      Object {
        "border": "2px solid #CFCFCF",
        "height": 0,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "2px solid #5489DC",
          "marginLeft": "-2px",
          "marginTop": "-2px",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
